fix whitespace and a bit change of style

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -38,7 +38,7 @@ body {
     border-bottom: 1px solid black;
     color: #1DA1F2;
     font-size: 14px;
-    line-height: 32px;
+    line-height: 30px;
     padding: 0px 10px;
     width: 100%;
     display: flex;
@@ -148,19 +148,19 @@ body {
     width: 100%;
 }
 select.dropdown {
-  background-image:
-    linear-gradient(45deg, transparent 50%, #999 50%),
-    linear-gradient(135deg, #999 50%, transparent 50%),
-    linear-gradient(to right, #3E3E3E, #3E3E3E);
-  background-position:
-    calc(100% - 19px) calc(1em + 1px),
-    calc(100% - 14px) calc(1em + 1px),
-    100% 0;
-  background-size:
-    4px 4px,
-    5px 4px,
-    2.3em 2.5em;
-  background-repeat: no-repeat;
+    background-image:
+        linear-gradient(45deg, transparent 50%, #999 50%),
+        linear-gradient(135deg, #999 50%, transparent 50%),
+        linear-gradient(to right, #3E3E3E, #3E3E3E);
+    background-position:
+        calc(100% - 19px) calc(1em + 1px),
+        calc(100% - 14px) calc(1em + 1px),
+        100% 0;
+    background-size:
+        4px 4px,
+        5px 4px,
+        2.3em 2.5em;
+    background-repeat: no-repeat;
 }
 .menublockinner a,
 .menublockinner a:visited {
@@ -250,7 +250,7 @@ select.dropdown {
 input[type=checkbox] + .togglebutton {
     background-color: black;
     border-radius: 20px;
-    margin: 6px auto;
+    margin: 7px auto;
     width: 32px;
     height: 16px;
     position: relative;
